--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d list"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "vue": "^3.5.18"
