fix name... just SUNITY!!!

--- a/package.json
+++ b/package.json
@@ -31,5 +31,5 @@
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0"
   },
-  "homepage": "https://samenpien.github.io/SANITY"
+  "homepage": "https://samenpien.github.io/SUNITY"
 }
